--- a/Assignment_1_1_bubble_sort/Assignment_1_1_bubble_sort.cbp
+++ b/Assignment_1_1_bubble_sort/Assignment_1_1_bubble_sort.cbp
@@ -34,6 +34,7 @@
 		<Unit filename="1_1_bubble_sort.cpp">
 			<Option target="Debug" />
 		</Unit>
+		<Unit filename="1_2_ascend_order.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
