--- a/Assignment_6_7/Assignment_6_7.cbp
+++ b/Assignment_6_7/Assignment_6_7.cbp
@@ -19,6 +19,7 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="Assignment_6_7.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
