modified by code::blocks

--- a/Assignment_7_5/Assignment_7_5.cbp
+++ b/Assignment_7_5/Assignment_7_5.cbp
@@ -19,6 +19,7 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="Assignment_7_5.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
